# cost_estimator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
cost_estimator/: __init__.py  app.py  calculations.py  ecs_pricing.py
cost_estimator/static/: ec2_costs.csv  test_ec2_costs.csv
cost_estimator/templates/: cost_estimator.html  display_costs.html
tests/: test_app.py
