[project]
name = "cost-estimator"
version = "0.1.0"
description = "A Python application for cost estimation."
license = { text = "MIT" }
authors = [
    { name = "Aaron Hatcher", email = "aaron@aaronhatcher.com" }
]

[tool.poetry]
packages = [
    { include = "cost_estimator" }
]

[tool.poetry.dependencies]
python = "^3.12"
# Add your project dependencies here, e.g.:
# requests = "^2.28.1"
boto3 = "^1.37.22"
flask = "^3.1.0"
coverage = "^7.7.1"
urllib3 = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
